<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/cafe_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/basic_fragment_toprectangle_size"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/banner_cafe_grey"
        android:contentDescription="@string/your_coffee" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_cafe_liferules_title"
        android:textColor="@color/fragment_title"
        android:textSize="@dimen/basic_fragment_title_size"
        android:layout_below="@id/cafe_image"
        android:layout_marginTop="-50dp"
        android:layout_marginLeft="20dp"/>

    <ImageView
        android:id="@+id/cafe_line"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/cafe_image"
        android:src="@drawable/rectangle_fragment_cafe"
        android:contentDescription="@string/separator" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cafe_line"
        android:layout_above="@+id/cafe_button_rules">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Code de vie -->

            <TextView
                android:id="@+id/cafe_liferules_content_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_cafe_liferules_content_title"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/fragment_cafe_accent_color"
                style="@style/title_margin" />

            <TextView
                android:id="@+id/cafe_liferules_content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_cafe_liferules_content_text"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/text_content"
                style="@style/text_margin" />

            <TextView
                android:id="@+id/fragment_cafe_liferules_content_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_cafe_liferules_content_note"
                android:textStyle="italic"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/text_content"
                style="@style/text_margin" />

            <!-- Consentement -->

            <TextView
                android:id="@+id/cafe_liferules_consentement_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_cafe_liferules_consentement_title"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/fragment_cafe_accent_color"
                style="@style/title_margin" />

            <TextView
                android:id="@+id/cafe_liferules_consentement_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_cafe_liferules_consentement_text"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/text_content"
                style="@style/text_margin" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
