<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/cafe_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/basic_fragment_toprectangle_size"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/banner_about"
        android:contentDescription="@string/your_coffee" />

    <View
        android:id="@+id/banner_bottom_gradient"
        android:layout_width="match_parent"
        android:layout_height="@dimen/basic_fragment_toprectangle_size"
        android:background="@drawable/banner_bottom_gradient"
        />

    <View
        android:id="@+id/banner_top_gradient"
        android:layout_width="match_parent"
        android:layout_height="@dimen/basic_fragment_toprectangle_size"
        android:background="@drawable/banner_top_gradient"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_about_title"
        android:textColor="@color/fragment_title"
        android:textSize="@dimen/basic_fragment_title_size"
        android:layout_below="@id/cafe_image"
        android:layout_marginTop="-50dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/about_title" />

    <ImageView
        android:id="@+id/cafe_line"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/cafe_image"
        android:src="@drawable/rectangle_fragment_cafe"
        android:contentDescription="@string/separator" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ScrollView"
        android:fillViewport="false"
        android:layout_below="@+id/cafe_line">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/about_comite_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_about_comite_title"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/fragment_cafe_accent_color"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="36dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:id="@+id/about_comite_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_about_comite_text"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/text_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/about_thanks_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_about_thanks_title"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/fragment_cafe_accent_color"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="36dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/about_thanks_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_about_thanks_text"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/text_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
